--- a/package.json
+++ b/package.json
@@ -1,24 +1,44 @@
 {
   "name": "hochzeit",
-  "version": "1.0.0",
-  "description": "View CV: [stephandee.github.io/CurriculumVitae/](https://stephandee.github.io/Hochzeit/)",
-  "main": "index.html",
-  "dependencies": {
-    "angular-material": "^1.1.18",
-    "angular": "^1.8.3"
-  },
-  "devDependencies": {},
+  "version": "0.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build --base-href https://stephandee.github.io/Hochzeit/",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
+    "serve:ssr:hochzeit": "node dist/hochzeit/server/server.mjs"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/StephanDee/Hochzeit.git"
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^19.1.0",
+    "@angular/common": "^19.1.0",
+    "@angular/compiler": "^19.1.0",
+    "@angular/core": "^19.1.0",
+    "@angular/forms": "^19.1.0",
+    "@angular/platform-browser": "^19.1.0",
+    "@angular/platform-browser-dynamic": "^19.1.0",
+    "@angular/platform-server": "^19.1.0",
+    "@angular/router": "^19.1.0",
+    "@angular/ssr": "^19.1.7",
+    "express": "^4.18.2",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.15.0"
   },
-  "author": "Stephan Dünkel",
-  "license": "Apache-Lincense2.0",
-  "bugs": {
-    "url": "https://github.com/StephanDee/Hochzeit/issues"
-  },
-  "homepage": "https://github.com/StephanDee/Hochzeit#readme"
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^19.1.7",
+    "@angular/cli": "^19.1.7",
+    "@angular/compiler-cli": "^19.1.0",
+    "@types/express": "^4.17.17",
+    "@types/jasmine": "~5.1.0",
+    "@types/node": "^18.18.0",
+    "jasmine-core": "~5.5.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "~5.7.2"
+  }
 }
