--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.1.0",
-    "@angular/cdk": "~19.0.1",
+    "@angular/cdk": "^19.1.0",
     "@angular/common": "^19.1.0",
     "@angular/compiler": "^19.1.0",
     "@angular/core": "^19.1.0",
     "@angular/forms": "^19.1.0",
+    "@angular/material": "^19.1.0",
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@primeng/themes": "^19.0.0",
+    "@types/lodash-es": "^4.17.12",
+    "lodash-es": "^4.17.21",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.6",
     "quill": "1.3.7",
