--- a/angular.json
+++ b/angular.json
@@ -121,7 +121,8 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "public",
+                "output": "public"
               }
             ],
             "styles": [
