add npmrc, cache-clean script

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "install": "npm install",
+    "cache-clean": "npm cache clean --force",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --base-href https://stephandee.github.io/Hochzeit/",
     "publish": "npx angular-cli-ghpages --dir=dist/hochzeit",
-    "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
